--- a/package.json
+++ b/package.json
@@ -10,17 +10,20 @@
     "npm": ">=5",
     "node": ">=8"
   },
-  "author": "heyrict<github.com/heyrict>",
+  "author": "heyrict<heyrict@yandex.com>",
   "license": "MIT",
   "scripts": {
     "dev": "NODE_ENV=development next",
     "prettify": "prettier --write '**/*.js' '**/*.tsx' '**/*.ts'",
     "build": "NODE_ENV=production next build",
     "start": "NODE_ENV=production next start",
-    "extract-intl": "NODE_ENV=development babel-node --extensions .js,.ts scripts/extract-intl.js",
+    "predev": "npm run i18n:compile",
+    "prebuild": "npm run i18n:compile",
     "export-schema": "gq http://localhost:8000/graphql -H \"X-Cindy-Admin-Secret: $ADMIN_SECRET\" --introspect > generated/schema.graphql; echo \"const typeDefs=\\``cat generated/schema.graphql`\\`;\nexport default typeDefs;\" > generated/typeDefs.js",
     "export-graphql-types": "apollo codegen:generate -c ./apollo.config.js --target typescript generated",
     "clean-graphql-types": "rm -r `find graphql -name generated`",
+    "i18n:extract": "formatjs extract 'messages/**/*.ts' --format simple --out-file lang/en.json && NODE_ENV=development node scripts/update-lang.js",
+    "i18n:compile": "formatjs compile-folder --format simple lang compiled-lang",
     "test": "jest",
     "test:watch": "jest --watch"
   },
@@ -32,54 +35,46 @@
     "@formatjs/intl-relativetimeformat": "^8.0.3",
     "@multiavatar/multiavatar": "^1.0.5",
     "apollo-upload-client": "^17.0.0",
-    "body-parser": "^1.19.0",
     "deepmerge": "^4.2.2",
-    "dompurify": "^2.0.7",
+    "dompurify": "^2.3.6",
     "emotion-theming": "^10.0.10",
     "fnv-plus": "^1.2.12",
     "graphql": "^15.4.0",
     "hoist-non-react-statics": "^3.3.0",
-    "intl": "^1.2.5",
     "isomorphic-unfetch": "^3.0.0",
     "jsdom": "^15.1.1",
     "markdown-it": "^12.3.2",
     "markdown-it-emoji": "^1.4.0",
     "next": "^12.1",
-    "react": "^16.8.6",
+    "react": "^17.0",
     "react-dom": "^16.8.6",
     "react-fast-compare": "^2.0.4",
-    "react-intl": "^5.10",
+    "react-intl": "^5.24.6",
     "react-popper": "^1.3.3",
-    "react-portal": "^4.2.0",
-    "react-redux": "^7.1.0",
-    "react-select": "^3.0.4",
+    "react-portal": "^4.0.4",
+    "react-redux": "^7.2.6",
+    "react-select": "^5.2.2",
     "react-toastify": "^5.3.1",
     "react-waypoint": "^9.0.2",
     "redux": "^4.0.1",
     "redux-saga": "^1.0.2",
     "reselect": "^4.0.0",
-    "smoothscroll-polyfill": "^0.4.4",
-    "styled-system": "^5.0.5",
-    "subscriptions-transport-ws": "^0.9.16"
+    "styled-system": "^5.1.5",
+    "subscriptions-transport-ws": "^0.11.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.4.4",
-    "@babel/core": "^7.4.5",
-    "@babel/node": "^7.5.0",
-    "@babel/register": "^7.4.4",
+    "@formatjs/cli": "^4.2.31",
+    "@formatjs/swc-plugin": "^1.3.2",
     "@types/cookie": "^0.3.3",
     "@types/dompurify": "^0.0.33",
     "@types/enzyme": "^3.9.3",
-    "@types/intl": "^1.2.0",
     "@types/jest": "^24.0.13",
     "@types/markdown-it": "^0.0.8",
-    "@types/next": "^8.0.5",
-    "@types/node": "^12.0.8",
-    "@types/react": "^16.8.19",
-    "@types/react-dom": "^16.8.4",
-    "@types/react-portal": "^4.0.2",
+    "@types/node": "^17.0.8",
+    "@types/react": "^17.0",
+    "@types/react-dom": "^17.0",
+    "@types/react-portal": "^4.0.4",
     "@types/react-redux": "^7.1.0",
-    "@types/react-select": "^3.0.0",
     "@types/styled-system": "^5.0.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-react-intl": "^3.0.1",
