chore(deps): Update react to v17
, react-popper to v2 and react-toastify to v8

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@formatjs/intl-pluralrules": "^4.0.3",
     "@formatjs/intl-relativetimeformat": "^8.0.3",
     "@multiavatar/multiavatar": "^1.0.5",
+    "@popperjs/core": "^2.11.5",
     "apollo-upload-client": "^17.0.0",
     "deepmerge": "^4.2.2",
     "dompurify": "^2.3.6",
@@ -47,16 +48,16 @@
     "markdown-it-emoji": "^1.4.0",
     "next": "^12.1",
     "react": "^17.0",
-    "react-dom": "^16.8.6",
-    "react-fast-compare": "^2.0.4",
+    "react-dom": "^17.0",
+    "react-fast-compare": "^3.2.0",
     "react-intl": "^5.24.6",
-    "react-popper": "^1.3.3",
-    "react-portal": "^4.0.4",
-    "react-redux": "^7.2.6",
+    "react-popper": "^2.2.5",
+    "react-portal": "^4.2.2",
+    "react-redux": "^7.2.8",
     "react-select": "^5.2.2",
-    "react-toastify": "^5.3.1",
-    "react-waypoint": "^9.0.2",
-    "redux": "^4.0.1",
+    "react-toastify": "^8.2.0",
+    "react-waypoint": "^10.0.1",
+    "redux": "^4.1.2",
     "redux-saga": "^1.0.2",
     "reselect": "^4.0.0",
     "styled-system": "^5.1.5",
