--- a/package.json
+++ b/package.json
@@ -40,13 +40,17 @@
     "dompurify": "^2.3.6",
     "fnv-plus": "^1.2.12",
     "graphql": "^15.4.0",
+    "graphql-ast-types-browser": "^1.0.2",
     "hoist-non-react-statics": "^3.3.0",
     "isomorphic-unfetch": "^3.0.0",
     "jsdom": "^19.0.0",
     "markdown-it": "^12.3.2",
     "markdown-it-emoji": "^1.4.0",
     "next": "^12.1",
+    "pluralize": "^8.0.0",
+    "ra-data-graphql": "^3.19.11",
     "react": "^17.0",
+    "react-admin": "^4.0.1",
     "react-dom": "^17.0",
     "react-fast-compare": "^3.2.0",
     "react-intl": "^5.24.6",
@@ -59,6 +63,7 @@
     "redux": "^4.1.2",
     "redux-saga": "^1.0.2",
     "reselect": "^4.0.0",
+    "stringcase": "^4.3.1",
     "styled-system": "^5.1.5",
     "subscriptions-transport-ws": "^0.11.0"
   },
@@ -71,6 +76,7 @@
     "@types/jest": "^27.4.0",
     "@types/markdown-it": "^0.0.8",
     "@types/node": "^17.0.8",
+    "@types/pluralize": "^0.0.29",
     "@types/react": "^17.0",
     "@types/react-dom": "^17.0",
     "@types/react-portal": "^4.0.4",
