--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "isomorphic-unfetch": "^3.0.0",
     "jsdom": "^19.0.0",
     "markdown-it": "^12.3.2",
-    "markdown-it-emoji": "^1.4.0",
+    "markdown-it-emoji": "^2.0.0",
     "next": "^12.1",
     "pluralize": "^8.0.0",
     "ra-data-graphql": "^3.19.11",
@@ -75,6 +75,7 @@
     "@types/enzyme": "^3.9.3",
     "@types/jest": "^27.4.0",
     "@types/markdown-it": "^0.0.8",
+    "@types/markdown-it-emoji": "^2.0.2",
     "@types/node": "^17.0.8",
     "@types/pluralize": "^0.0.29",
     "@types/react": "^17.0",
