--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -1,6 +1,5 @@
 Pillow>3.0
 beautifulsoup4>=4.11.1
-twitter>=1.18.0,<2.0
 gql>=3.0.0a5,<4.0
 websockets==10.3
 typing_extensions==4.2.0
@@ -8,3 +7,4 @@ pytz>=2022.1
 requests>=2.27.1
 pyyaml>=6.0
 markdown>=3.3.7
+tweepy>=4.14.0
