--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@multiavatar/multiavatar": "^1.0.5",
     "@popperjs/core": "^2.11.5",
     "apollo-upload-client": "^17.0.0",
+    "date-fns": "^2.30.0",
     "deepmerge": "^4.2.2",
     "dequal": "^2.0.3",
     "dompurify": "^2.3.6",
@@ -52,6 +53,7 @@
     "ra-data-graphql": "^3.19.11",
     "react": "^18.0",
     "react-admin": "^4.0.1",
+    "react-datepicker": "^4.18.0",
     "react-dom": "^18.0",
     "react-fast-compare": "^3.2.0",
     "react-intl": "^6.0.5",
@@ -80,6 +82,7 @@
     "@types/node": "^17.0.8",
     "@types/pluralize": "^0.0.29",
     "@types/react": "^18.0",
+    "@types/react-datepicker": "^4.15.0",
     "@types/react-dom": "^18.0",
     "@types/react-portal": "^4.0.4",
     "@types/react-redux": "^7.1.0",
